// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse view have orderItem 1`] = `
Array [
  Object {
    "id": "1",
    "type": "ORDER_HEADER",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "isNew": undefined,
    "type": "ORDER",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "1",
    ],
    "type": "LINK-1-ORDER",
  },
  Object {
    "id": "1",
    "type": "ORDER_ITEM_ALL",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "1",
    ],
    "type": "LINK-1-ORDER",
  },
  Object {
    "id": "1",
    "type": "BATCH_ALL",
  },
]
`;

exports[`collapse view no orderItem 1`] = `
Array [
  Object {
    "id": "1",
    "type": "ORDER_HEADER",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "isNew": undefined,
    "type": "ORDER",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
]
`;

exports[`normal view normal data 1`] = `
Array [
  Object {
    "id": "1",
    "type": "ORDER_HEADER",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "isNew": undefined,
    "type": "ORDER",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "1",
    ],
    "type": "LINK-1-ORDER_ITEM_ALL",
  },
  Object {
    "id": "1",
    "type": "ORDER_ITEM_ALL",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "1",
    ],
    "type": "LINK-1-BATCH_ALL",
  },
  Object {
    "id": "1",
    "type": "BATCH_ALL",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "2",
      "1",
    ],
    "type": "LINK-4-ORDER_ITEM",
  },
  Object {
    "id": "1",
    "isLast": false,
    "isNew": undefined,
    "type": "ORDER_ITEM",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "2",
      "1",
    ],
    "type": "LINK-1-BATCH",
  },
  Object {
    "id": "1",
    "isLast": false,
    "isNew": false,
    "type": "BATCH",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "2",
    ],
    "type": "LINK-2-BATCH",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "2",
    "relatedIds": Array [
      "2",
    ],
    "type": "LINK-4-BATCH",
  },
  Object {
    "id": "2",
    "isLast": true,
    "isNew": false,
    "type": "BATCH",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "2",
    "relatedIds": Array [
      "2",
    ],
    "type": "LINK-4-ORDER_ITEM",
  },
  Object {
    "id": "2",
    "isLast": true,
    "isNew": undefined,
    "type": "ORDER_ITEM",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
]
`;
